# cloudflare-ddns

./: .env.build  .env.build.china  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.alpine.dev  Dockerfile.minimal  Dockerfile.scratch  Dockerfile.scratch.glibc  Dockerfile.window.gnu.alpine  README.md  README.zh.md
.cargo/: config.toml
.github/workflows/: docker-debug.yml  docker-publish.yml  ghcr-clean-old.yml  ghcr-publish.yml  next-release.yml
docs/: 本地容器化构建流程更新.md  迭代-01-小张的想法.md  迭代-02-轻量化镜像.md  迭代-03-环境变量文件内容参考.md  迭代-04-支持Cron.md  迭代-05-参考已有py程序.md  迭代-06-跨平台注释和编译.md
scripts/: README.md  build-alpine-dev.sh  build-alpine-optimized.sh  build-window-gnu-alpine.sh  local-build-scratch-in-docker.sh  push-docker-io.sh
src/: main.rs
